force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/BOT_Benefit_Design__c.field-meta.xml
<CustomField>
    <fullName>BOT_Benefit_Design__c</fullName>
    <description>To store benefit design name like 2 tier or 3 tier etc</description>
    <label>Benefit Design</label>
    <length>50</length>
    <type>Text</type>
</CustomField>