force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/BOT_Benefit_Design_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Benefit_Design_ID__c</fullName>
    <description>To store the BOT Formulary ID. It is used for BOT internal reference.</description>
    <label>Benefit Design ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>