force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/BOT_Formulary_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Product_ID__c</fullName>
    <description>To store the BOT Drug Id. It is used for BOT internal reference.</description>
    <label>Formulary Product ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>