force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/BOT_Market__c.field-meta.xml
<CustomField>
    <fullName>BOT_Market__c</fullName>
    <description>To pull market from the Formulary Product object</description>
    <formula>TEXT(Product_vod__r.Market_vod__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>