force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/Competitor_vod__c.field-meta.xml
<CustomField>
    <fullName>Competitor_vod__c</fullName>
    <description>Indicates whether the product is a competitor product. If true, product is a competitor; otherwise it is a company product. Evaluated from the Competitor_vod field in Formulary_Product_vod object. Not visible in the page layout - used only by the application.</description>
    <formula>Product_vod__r.Competitor_vod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>