force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/Restrictions_Source_vod__c.field-meta.xml
<CustomField>
    <fullName>Restrictions_Source_vod__c</fullName>
    <description>This data is meant to be loaded and refreshed by the customer from the source data provider, such as MediMedia and not changed by end users. If the Restrictions field is filled in, it will override the Restrictions (Source) field in the display of the formulary control.</description>
    <label>Restrictions (Source)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>QL</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>