force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/Restrictions_vod__c.field-meta.xml
<CustomField>
    <fullName>Restrictions_vod__c</fullName>
    <description>Restriction codes for this product in this benefit design line. For example, one of the codes might be &#39;PA&#39;, which stands for Prior Auth. The valid values in this field are controlled by the value of the type field, because not all restriction codes are valid for all types of benefit designs.</description>
    <label>Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type_vod__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>QL</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>