force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/Status_Source_vod__c.field-meta.xml
<CustomField>
    <fullName>Status_Source_vod__c</fullName>
    <description>This data is meant to be loaded and refreshed by the customer from the source data provider, such as MediMedia and not changed by end users. If the Status field is filled in, it will override the Status (Source) field in the display of the formulary control.</description>
    <label>Status (Source)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Restrictions</fullName>
            </value>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Non-Formulary</fullName>
            </value>
            <value>
                <fullName>Non-Formulary / Covered</fullName>
            </value>
            <value>
                <fullName>Non-Formulary / Higher Copay</fullName>
            </value>
            <value>
                <fullName>Non-Formulary / Not Reimbursed</fullName>
            </value>
            <value>
                <fullName>Non-Formulary / Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Non-Formulary / Unknown</fullName>
            </value>
            <value>
                <fullName>Non-Preferred</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>Not Listed / Covered</fullName>
            </value>
            <value>
                <fullName>Not Listed / Higher Copay</fullName>
            </value>
            <value>
                <fullName>Not Listed / Not Reimbursed</fullName>
            </value>
            <value>
                <fullName>Not Listed / Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Not Listed / Unknown</fullName>
            </value>
            <value>
                <fullName>Not Reimbursed</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Tier 6</fullName>
            </value>
            <value>
                <fullName>Tier 7</fullName>
            </value>
            <value>
                <fullName>Tier 8</fullName>
            </value>
            <value>
                <fullName>Tier 9</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>