force-app/main/default/objects/Benefit_Design_Line_vod__c/fields/Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Type_vod__c</fullName>
    <description>The type field is the type of benefit design (commercial, VA, Medicade, etc.)  It is populated by a trigger, which pulls down the value from the type field on the parent benefit design object. The type field needs to be replicated to the benefit design line object so that it can control the dependent picklists for status and restrictions.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>