force-app/main/default/objects/Benefit_Design_Line_vod__c/recordTypes/BOT_Benefit_Design_Line.recordType-meta.xml
<RecordType>
    <fullName>BOT_Benefit_Design_Line</fullName>
    <active>true</active>
    <description>It is created by BusinessOne Technologies Inc and used to store BOT Benefit design records with drugs.</description>
    <label>BOT_Benefit Design Line</label>
</RecordType>